firstpod.yml
apiVersion: v1
kind: Pod
metadata:
  name: myfirstpod
  labels:
    env: dev
    appname: sampleapp
spec:
  containers:
    - name: firstcontainer
      image: coolgourav147/nginx-custom
    - name: secondcontainer
      image: coolgourav147/nginx-custom
