firstservice.yml
apiVersion: v1
kind: Service
metadata:
  name: myfirstservice
  labels:
    servicelbl: labelname
spec:
  type: NodePort
  ports:
    - nodePort: 3200
      port: 9000
      targetPort: 80
  selector:
    type: app
